--- a/TelaLogin/App.xaml
+++ b/TelaLogin/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TelaLogin"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="TextBox">
             <Setter Property="SnapsToDevicePixels" Value="True" />
@@ -18,7 +18,7 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                CornerRadius="6">
+                                CornerRadius="20">
                             <ScrollViewer Margin="0"
                                           x:Name="PART_ContentHost" />
                         </Border>
